--- a/Labs/Lab03_DebuggingAndProfiling.ipynb
+++ b/Labs/Lab03_DebuggingAndProfiling.ipynb
@@ -75,7 +75,7 @@
         "id": "NDTqh1AThCUH",
         "outputId": "e2617153-9907-4a32-8eea-19cae88ea426"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -115,7 +115,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -159,7 +159,7 @@
         "\n",
         "We're not going to focus on memory profiling, but instead on time (aka speed) profiling.  A profiler tells us which parts of the code took a long time.  Some profiling tells us which **functions** take a while, other types of profiling tell us which **lines** of code take a while. Today we'll do the latter.\n",
         "\n",
-        "There are some caveats: to do profiling, the profiler adds some extra overhead, so everything runs a bit slower, and you don't get a 100% accurate picture of exactly how long each part of the code takes. Usuall it's accurate enough to give you an idea of where the slowish parts are.\n",
+        "There are some caveats: to do profiling, the profiler adds some extra overhead, so everything runs a bit slower, and you don't get a 100% accurate picture of exactly how long each part of the code takes. Usually it's accurate enough to give you an idea of where the slowish parts are.\n",
         "\n",
         "Some programmers avoid formal profiling but just adding timing statements into their code (see section 2c for a  few ways to do this). Sometimes this is easy to do and sufficient, but other times it's not systematic enough and takes more effort than you need; it's also a problem if you want to profile some library code where you don't want to have to edit the files.\n",
         "\n",
@@ -193,7 +193,7 @@
         "id": "lY6oESW6UZZJ",
         "outputId": "7d9a6849-2bc4-4ef0-e02a-999df5900c89"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -221,7 +221,7 @@
       "metadata": {
         "id": "sLLxAwS82TFb"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -266,7 +266,7 @@
         "id": "9VGsmH5E2und",
         "outputId": "c7e96503-49ad-4207-bfd5-b52c6bca3675"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -305,7 +305,7 @@
       "metadata": {
         "id": "apXRH9-UVcLC"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -327,7 +327,7 @@
       "metadata": {
         "id": "6DlNd_YaV99d"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -349,7 +349,7 @@
       "metadata": {
         "id": "PBdXMM9-W-Fv"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -381,18 +381,6 @@
       ],
       "metadata": {
         "id": "UqKmJWsE4Emg"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Solution: run this code:\n",
-        "%lprun -f sla.expm sla.expm(A)"
-      ],
-      "metadata": {
-        "id": "Hrhv0jKbXatp"
       },
       "execution_count": null,
       "outputs": []
@@ -450,7 +438,7 @@
         "id": "AgLjeQ5N2bAn",
         "outputId": "b9766337-4be7-4af4-d1ca-1d61252f9533"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -486,7 +474,7 @@
         "id": "u3-9jlFg2iGf",
         "outputId": "b0c64c03-5e09-4bb8-f9a9-2f21b6007675"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -523,7 +511,7 @@
         "id": "U0lZ-AYH3dJ9",
         "outputId": "8ec4fab9-e6ca-4994-a876-65c7914d05fd"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -582,7 +570,7 @@
         "id": "wSNdWD7e3gkg",
         "outputId": "4f0762bc-bdeb-4db6-b1af-cf698157a481"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -617,7 +605,7 @@
         "id": "ANCUzHiF32oe",
         "outputId": "f8a94857-a2aa-48c9-c933-eff2f59e00d7"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -656,7 +644,7 @@
         "id": "Ql4Z0GAN4Bcm",
         "outputId": "7c04fc49-b2bb-44be-b957-9a3c0593c3e6"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
