--- a/Demos/Ch1_AutoDiff.ipynb
+++ b/Demos/Ch1_AutoDiff.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN0GG2mpZP+OyFppssWQW1v",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "eQiN5MqMMJDP"
       },
@@ -104,7 +103,7 @@
       "metadata": {
         "id": "1RanQp4iMSU-"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -137,7 +136,7 @@
         "id": "5FqkGJkWNBsb",
         "outputId": "105f40cf-772d-41de-8793-d6c1f8d6c79c"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -217,7 +216,7 @@
         },
         "outputId": "6b8a89fd-692b-480a-8dfd-8ff1b2bf2a39"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -241,7 +240,7 @@
         "id": "F9yFNCfvQnpW",
         "outputId": "6a94408e-d3d8-49f4-afeb-8d661e63d79e"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -263,7 +262,7 @@
       "metadata": {
         "id": "-U611acvPRcv"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -279,7 +278,7 @@
         "id": "Nyz6jkqfOHEW",
         "outputId": "d9feb3d4-72ba-45a8-cfc4-d8d14b1f763c"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -304,7 +303,7 @@
         "id": "Cr2osPaOOKVJ",
         "outputId": "a3387ade-2dc6-4ad0-e8da-f76df55b895d"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -329,7 +328,7 @@
         "id": "YkMddiRVPTXY",
         "outputId": "82a5b0a9-816b-41dc-c634-66bb9262efe5"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -396,7 +395,7 @@
         "id": "UkXQzUcDRYnM",
         "outputId": "2139c3a1-4ce1-494f-cdb1-d61f7f49acfc"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -426,7 +425,7 @@
         "id": "ll6tXP598HTY",
         "outputId": "c5ef1e5e-8d91-4550-e8b9-adaf12330856"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -469,7 +468,7 @@
         "id": "cukxRIAiTvwR",
         "outputId": "8987a2e1-4e2f-40a5-e0a9-e96a3915fd9d"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -498,7 +497,7 @@
         "id": "1tFe7aVQT8th",
         "outputId": "ac888b1d-b6a3-4705-ef36-6bf08fe665e3"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -526,7 +525,7 @@
         "id": "AHNTIuBVUWOt",
         "outputId": "07c6c712-9e36-4b90-fff0-dda57258f594"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -565,7 +564,7 @@
         "id": "MSsVDLGEVGPq",
         "outputId": "1d7c7780-d3c1-4f7d-f638-0f45b4407545"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -593,7 +592,7 @@
         "id": "Um7mr_t3VgFr",
         "outputId": "79f492de-edf5-45be-f1fc-cce5bb14d10c"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -609,10 +608,106 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Showing that AutoDiff depends on the implementation\n",
+        "\n",
+        "We'll define the function $f(x)=0$ but in a slow way"
+      ],
+      "metadata": {
+        "id": "pzbhKuC0e_D2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "d   = int(4e3)\n",
+        "\n",
+        "torch.manual_seed(100)\n",
+        "A   = torch.randn( (d,d) )\n",
+        "\n",
+        "def f(x, N = 100):\n",
+        "    \"\"\" Implements the zero function: f(x) = 0 \"\"\"\n",
+        "    for k in range(N):\n",
+        "        x = A @ x\n",
+        "\n",
+        "    return torch.sum(x - x)\n",
+        "\n",
+        "x   = torch.randn( (d,1), requires_grad=True )"
+      ],
+      "metadata": {
+        "id": "rf0F75eDVpsJ"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%time\n",
+        "with torch.no_grad():\n",
+        "    y = f(x)"
+      ],
+      "metadata": {
+        "id": "iPH7qopFfKBj",
+        "outputId": "4b79ddf9-fde8-4220-a5cc-68a1848de255",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CPU times: user 564 ms, sys: 3 µs, total: 564 ms\n",
+            "Wall time: 567 ms\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The gradient is the all zeros vector, but as you can see from the time it takes to execute the code, it's not being that clever..."
+      ],
+      "metadata": {
+        "id": "qYe55YIFfi9h"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%time\n",
+        "y = f(x)\n",
+        "y.backward()"
+      ],
+      "metadata": {
+        "id": "ZbJiRbGSfSMq",
+        "outputId": "46110da4-604e-4aa2-c9e8-721708a2b244",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CPU times: user 1.25 s, sys: 5.3 ms, total: 1.26 s\n",
+            "Wall time: 1.32 s\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "rf0F75eDVpsJ"
+        "id": "JnOs0YUBffQ7"
       },
       "execution_count": null,
       "outputs": []
