add Newton with autodiff example

--- a/Demos/Ch2_IntroToBisection.ipynb
+++ b/Demos/Ch2_IntroToBisection.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "Ch2_IntroToBisection.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPxQHDnLPmxlBHhDgchl6VE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,7 +56,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 406
         },
-        "outputId": "7d97d726-7e74-4124-9559-ab8b5e5d4397"
+        "outputId": "05e1f820-1ee3-47ba-98ab-afef90db250e"
       },
       "source": [
         "import numpy as np\n",
@@ -156,7 +155,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e7090035-5576-477c-f0fc-1c1ed75999ef"
+        "outputId": "28e7715c-e8ba-4a35-c35a-6d466b8c6bf2"
       },
       "source": [
         "# Display the results (and the error)\n",
@@ -246,7 +245,7 @@
       "source": [
         "# For fun, let's try another method\n",
         "obj = objective(f)\n",
-        "methods = ['brentq','brenth','ridder','toms748','secant']\n",
+        "methods = ['brentq','brenth','ridder','toms748','secant','newton']\n",
         "for meth in methods:\n",
         "    obj.reset()\n",
         "    p   = root_scalar(obj, method=meth, bracket=(1.5,2.5), x0=2,xtol = 1e-14, maxiter = 100 ) # An equivalent way to call it\n",
@@ -256,12 +255,12 @@
       ],
       "metadata": {
         "id": "WxvShURwoSc1",
-        "outputId": "7549a952-7197-40de-d6c7-82d9f7d53d73",
+        "outputId": "a5bfa26a-47b0-4105-dcc4-39f3f552e948",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -320,7 +319,26 @@
             "Iter  4, p=\u001b[31m2.20\u001b[0m49182236856963, |f(p)| = 2.5e-03. We have  4.4 correct digits on p\n",
             "Iter  5, p=\u001b[31m2.205003\u001b[0m5168508120, |f(p)| = 6.9e-06. We have  7.0 correct digits on p\n",
             "Iter  6, p=\u001b[31m2.2050032780\u001b[0m107340, |f(p)| = 3.9e-10. We have 11.2 correct digits on p\n",
-            "Iter  7, p=\u001b[31m2.2050032780240598\u001b[0m, |f(p)| = 3.6e-15. We have 17.0 correct digits on p\n"
+            "Iter  7, p=\u001b[31m2.2050032780240598\u001b[0m, |f(p)| = 3.6e-15. We have 17.0 correct digits on p\n",
+            "============ Using newton method ============\n",
+            "Iter  0, p=\u001b[31m2.\u001b[0m0000000000000000, |f(p)| = 5.2e+00. We have  1.0 correct digits on p\n",
+            "Iter  1, p=\u001b[31m2.\u001b[0m0000000000000000, |f(p)| = 5.2e+00. We have  1.0 correct digits on p\n",
+            "Iter  2, p=\u001b[31m2.\u001b[0m0000000298023224, |f(p)| = 5.2e+00. We have  1.0 correct digits on p\n",
+            "Iter  3, p=\u001b[31m2.2\u001b[0m355685502384608, |f(p)| = 9.1e-01. We have  1.9 correct digits on p\n",
+            "Iter  4, p=\u001b[31m2.2\u001b[0m355685502384608, |f(p)| = 9.1e-01. We have  1.9 correct digits on p\n",
+            "Iter  5, p=\u001b[31m2.2\u001b[0m355685835510282, |f(p)| = 9.1e-01. We have  1.9 correct digits on p\n",
+            "Iter  6, p=\u001b[31m2.205\u001b[0m6071348026909, |f(p)| = 1.8e-02. We have  3.6 correct digits on p\n",
+            "Iter  7, p=\u001b[31m2.205\u001b[0m6071348026909, |f(p)| = 1.8e-02. We have  3.6 correct digits on p\n",
+            "Iter  8, p=\u001b[31m2.205\u001b[0m6071676687985, |f(p)| = 1.8e-02. We have  3.6 correct digits on p\n",
+            "Iter  9, p=\u001b[31m2.205003\u001b[0m5171753954, |f(p)| = 7.0e-06. We have  7.0 correct digits on p\n",
+            "Iter 10, p=\u001b[31m2.205003\u001b[0m5171753954, |f(p)| = 7.0e-06. We have  7.0 correct digits on p\n",
+            "Iter 11, p=\u001b[31m2.205003\u001b[0m5500325085, |f(p)| = 7.9e-06. We have  6.9 correct digits on p\n",
+            "Iter 12, p=\u001b[31m2.205003278024\u001b[0m1025, |f(p)| = 1.2e-12. We have 13.7 correct digits on p\n",
+            "Iter 13, p=\u001b[31m2.205003278024\u001b[0m1025, |f(p)| = 1.2e-12. We have 13.7 correct digits on p\n",
+            "Iter 14, p=\u001b[31m2.205003\u001b[0m3108812119, |f(p)| = 9.6e-07. We have  7.8 correct digits on p\n",
+            "Iter 15, p=\u001b[31m2.2050032780240598\u001b[0m, |f(p)| = 3.6e-15. We have 17.0 correct digits on p\n",
+            "Iter 16, p=\u001b[31m2.2050032780240598\u001b[0m, |f(p)| = 3.6e-15. We have 17.0 correct digits on p\n",
+            "Iter 17, p=\u001b[31m2.205003\u001b[0m3108811693, |f(p)| = 9.6e-07. We have  7.8 correct digits on p\n"
           ]
         }
       ]
@@ -328,7 +346,69 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Plot the error"
+        "That's weird, I thought Newton's method was good (when it works)?\n",
+        "\n",
+        "Let's explore.  We didn't give Newton's method a derivative, so what did it actually do? Probably approximated the derivative via finite differences.\n",
+        "\n",
+        "Let's call it more carefully, using the derivative. Our function is simply so we could do this by hand, but let's be lazy and use autodiff:"
+      ],
+      "metadata": {
+        "id": "LgG9b-G1pve2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import jax.numpy as jnp\n",
+        "import jax\n",
+        "\n",
+        "f_jax = lambda y : y*jnp.exp(y) - x # redefine f using jnp not np\n",
+        "obj = objective(f_jax)\n",
+        "# We could define \"fprime2\" in root_scalar which is slightly more efficient (it combines f and its derivative into one function call)\n",
+        "g = jax.grad(f_jax)\n",
+        "\n",
+        "obj.reset()\n",
+        "p   = root_scalar(obj, method='newton', fprime=g,bracket=(1.5,2.5), x0=2.,xtol = 1e-14, maxiter = 100 ) # An equivalent way to call it\n",
+        "history, fcn_history = obj.get_history()\n",
+        "print('============ Using '+'newton'+' method ============')\n",
+        "fancyErrorDisplay( history, fcn_history, trueAnswer)"
+      ],
+      "metadata": {
+        "id": "vbcrfQioojS9",
+        "outputId": "e8fbcb3c-cb7b-40eb-bc9d-76e552d90299",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "============ Using newton method ============\n",
+            "Iter  0, p=\u001b[31m2.\u001b[0m0000000000000000, |f(p)| = 5.2e+00. We have  1.0 correct digits on p\n",
+            "Iter  1, p=\u001b[31m2.2\u001b[0m355685234069824, |f(p)| = 9.1e-01. We have  1.9 correct digits on p\n",
+            "Iter  2, p=\u001b[31m2.205\u001b[0m6071758270264, |f(p)| = 1.8e-02. We have  3.6 correct digits on p\n",
+            "Iter  3, p=\u001b[31m2.205003\u001b[0m4999847412, |f(p)| = 5.7e-06. We have  7.0 correct digits on p\n",
+            "Iter  4, p=\u001b[31m2.2050032\u001b[0m615661621, |f(p)| = 0.0e+00. We have 17.0 correct digits on p\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Ahh, now we see Newton's method work as expected. Its pretty fast!"
+      ],
+      "metadata": {
+        "id": "kIH3fHglqMaJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Plot the error for bisection"
       ],
       "metadata": {
         "id": "_SI0_HRikO9j"
@@ -373,7 +453,7 @@
         "plt.show()\n",
         "print(f\"Using a least-squares fit, the average error decay is linear with base rho = {rho:.2f}\")"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -400,7 +480,7 @@
       "metadata": {
         "id": "HfHuvVzrkFk7"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     }
   ]
