Add check if g maps I into I

--- a/Labs/Lab05_FixedPt_RootFinding.ipynb
+++ b/Labs/Lab05_FixedPt_RootFinding.ipynb
@@ -52,7 +52,7 @@
       "metadata": {
         "id": "WacMaMZARaJ6"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -64,7 +64,7 @@
         "\n",
         "You can plot these via Python, but to make them nice and interactive is a bit of work (`matplotlib.animation.FuncAnimation` can do it, but you have to be quite proficient with Python and matplotlib).\n",
         "\n",
-        "For this demo, I recommend that you use [this geogebra online cobweb plot](https://www.geogebra.org/m/uvsfvNDt) or one of the varios Desmos apps (e.g., [Logistic Functino Cobweb Diagram](https://www.desmos.com/calculator/ktsps2nrhi)) which are quite simple and runs on most modern web browsers.\n",
+        "For this demo, I recommend that you use [this geogebra online cobweb plot](https://www.geogebra.org/m/uvsfvNDt) or one of the varios Desmos apps (e.g., [Logistic Function Cobweb Diagram](https://www.desmos.com/calculator/ktsps2nrhi)) which are quite simple and runs on most modern web browsers.\n",
         "\n",
         "We'll look at 5 different fixed-point reformulations of the same root-finding problem\n",
         "$$f(x) = x^3 + 4x^2 - 10, \\text{ find } f(x)=0$$\n",
@@ -88,7 +88,8 @@
         "2. Then, for each of the five variations,\n",
         "    - convince yourself via algebraic manipulations that the fixed-point problem is equivalent to the root-finding problem\n",
         "    - plot the fixed-point problem, i.e., $y=g_i(x)$ and $y=x$, and confirm visually that it looks like it has the same solution as the root-finding problem\n",
-        "    - find the max and min value of the derivative, $g_i$, over the interval $[1,2]$. This can be done either by hand or by graphing\n",
+        "    - find the max and min value of the derivative, $g'_i$, over the interval $[1,2]$. This can be done either by hand or by graphing\n",
+        "    - check if $g_i$ maps $[1,2]$ into $[1,2]$. This can be done either by hand or by graphing\n",
         "    - using the cobweb plotting software of your choice, run the fixed point iteration for each variation, trying it for starting points of both $x_0=1$ and $x_0=2$.  Does it converge? Diverge? Cycle?\n",
         "\n",
         "### Deliverables\n",
@@ -109,12 +110,13 @@
         "# 2a. Check that x = g_i(x) is the same as f(x)=0 for each i\n",
         "# 2b. Plot g_i(x) for each i, confirm part 2a visually\n",
         "# 2c. Find the max and min of g_i' over the interval [1,2]\n",
-        "# 2d. Run a cobweb plot for two initial conditions, for each i   (this can be done externally, just take screenshots)"
+        "# 2d. Check if g_1 maps [1,2] into [1,2]\n",
+        "# 2e. Run a cobweb plot for two initial conditions, for each i   (this can be done externally, just take screenshots)"
       ],
       "metadata": {
         "id": "WMYjU5ezMO9q"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -150,7 +152,7 @@
         "id": "qzm5RKV71AZX",
         "outputId": "0f30d8d0-3baa-4c1d-8d3a-16722a88b50c"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -267,7 +269,7 @@
         "id": "CzeavIbhMEpd",
         "outputId": "04b5d68e-6cff-4a2f-b6cd-d4bcc97baed8"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -314,7 +316,7 @@
         "id": "a1JBzhFAUlqP",
         "outputId": "9a26d41e-491f-4b01-8d58-88d6cc8ec3af"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -338,7 +340,7 @@
       "metadata": {
         "id": "f_hcd2HVPRG4"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -363,7 +365,7 @@
       "metadata": {
         "id": "Dq31PmegS537"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
