--- a/Demos/Ch10_NewtonForSystems.ipynb
+++ b/Demos/Ch10_NewtonForSystems.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNMfZncGKx+ek+L9dYAnvL6",
+      "authorship_tag": "ABX9TyPvjTzaiGplqwW4lW4RzwtP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -108,12 +108,17 @@
         "    g=g.at[0].set( 3*x[0] - jnp.cos(x[1]*x[2]) -1/2 )\n",
         "    g=g.at[1].set( x[0]**2 - 81*(x[1]+0.1)**2 + jnp.sin(x[2]) + 1.06 )\n",
         "    g=g.at[2].set( jnp.exp(-x[0]*x[1]) + 20*x[2] + (10*jnp.pi - 3)/3 )\n",
-        "    return g"
+        "    return g\n",
+        "\n",
+        "# And that gives us another, non-equivalent way to define G\n",
+        "# Not that we can control the scaling\n",
+        "def G_variant(x, scaling = 1.):\n",
+        "    return x + scaling*F(x)"
       ],
       "metadata": {
         "id": "jFhVDa6OVaaG"
       },
-      "execution_count": 6,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -312,9 +317,90 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# Let's try our variant... it need not work!\n",
+        "# i.e., how we formulate G matters\n",
+        "\n",
+        "GG = lambda x : G_variant(x, scaling=-.01)\n",
+        "# Check that we have a fixed point\n",
+        "GG( xTrue ) - xTrue"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DSl5FQRSXZ_h",
+        "outputId": "0db5ffec-9cc1-4ba6-d5f1-3e85aabc6f4b"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Array([0., 0., 0.], dtype=float64)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ... but it may not be an attractive fixed point\n",
+        "\n",
+        "scaling = 0.1 # can try for both positive and negative\n",
+        "\n",
+        "# xStart  = x0\n",
+        "xStart  = xTrue + .001 # small perturbation\n",
+        "\n",
+        "GG = lambda x : G_variant(x, scaling=scaling)\n",
+        "x, errHistFixedPt = fixedPointIterations( GG , xStart, errFcn = errFcn )"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CCisw7UfcYw4",
+        "outputId": "d7a91544-adca-4de7-ea3a-9c7ded8b5c42"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Iter  0, error is 2.39e-03\n",
+            "Iter  0, error is 4.49e-03\n",
+            "Iter  0, error is 1.25e-02\n",
+            "Iter  0, error is 3.68e-02\n",
+            "Iter  0, error is 1.10e-01\n",
+            "Iter  0, error is 3.30e-01\n",
+            "Iter  0, error is 9.91e-01\n",
+            "Iter  0, error is 2.97e+00\n",
+            "Iter  0, error is 8.90e+00\n",
+            "Iter  0, error is 2.67e+01\n",
+            "Iter  0, error is 8.01e+01\n",
+            "Iter  0, error is 2.40e+02\n",
+            "Iter  0, error is 7.21e+02\n",
+            "Iter  0, error is 2.16e+03\n",
+            "Iter  0, error is 6.49e+03\n",
+            "Iter  0, error is 1.95e+04\n",
+            "Iter  0, error is 5.84e+04\n",
+            "Iter  0, error is 1.75e+05\n",
+            "Iter  0, error is 6.33e+24\n",
+            "NaN encountered at iteration 19\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "DSl5FQRSXZ_h"
+        "id": "RIv4KsXGZkLr"
       },
       "execution_count": null,
       "outputs": []
