Add in academic example

--- a/Labs/Lab06_GPS.ipynb
+++ b/Labs/Lab06_GPS.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNiZ9vkXMo/SRKbhudRT1wU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,13 +54,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Dr-51ht8sAOE",
-        "outputId": "8beb737e-65d8-4c76-8737-a1a178fefc9e"
+        "outputId": "6f7b1282-a223-4f57-d5f2-60cc56fb2807"
       },
       "outputs": [
         {
@@ -160,7 +159,7 @@
       "metadata": {
         "id": "vroYL-ytsZjS"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -182,7 +181,7 @@
         "id": "NA4OK39gtMyv",
         "outputId": "c92349b7-b2a4-4308-d7d1-0426f198476d"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -222,7 +221,7 @@
       "metadata": {
         "id": "SrvQH78Q7W9s"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -339,7 +338,7 @@
       "metadata": {
         "id": "83Ic84CwJ-IV"
       },
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -434,7 +433,7 @@
       "metadata": {
         "id": "r8TbOTQ18jGf"
       },
-      "execution_count": 194,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -450,7 +449,7 @@
       "metadata": {
         "id": "d4LyoOt1BDhl"
       },
-      "execution_count": 195,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -483,7 +482,7 @@
         "id": "Q80KW9kFBauH",
         "outputId": "88f9ad3e-b973-4ed1-f45c-31dc90ee3a3d"
       },
-      "execution_count": 196,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -545,7 +544,7 @@
         "id": "i4ikGdUBBiLi",
         "outputId": "09d3900c-c498-4fa5-e504-643da574152a"
       },
-      "execution_count": 146,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -617,6 +616,111 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Or if you prefer, solve an academic example\n",
+        "We can create the data ourselves so that we know the true answer. This let's you get some confidence in your method, and it also removes many complicating factors (uncertainty in measurements, coordinate systems, the fact that the satellites are moving, etc.)\n",
+        "\n",
+        "Below I've set up a basic system (the numbers are not physical)\n",
+        "\n",
+        "We'll start by assuming we know the exact times, then move on to assuming we don't"
+      ],
+      "metadata": {
+        "id": "Mi5q6b59AWmi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = 3 # dimension of space\n",
+        "m = 3 # number of satellites, should be at least 3 for now\n",
+        "\n",
+        "xTrue = np.array( [1,2,3] ) # true location of receiver\n",
+        "\n",
+        "rng = np.random.default_rng(123)\n",
+        "S   = rng.standard_normal( (m,n) ) # locations of satellites, arbitrary for now\n",
+        "c   = 7.8 # speed of light\n",
+        "r   = np.linalg.norm( S - xTrue, axis=1 ) # true ranges\n",
+        "t   = r / c # travel times\n",
+        "pr  = c*t # measured pseudoranges\n",
+        "print('The measured data are the pseudorange \"pr\", one per satellite')\n",
+        "print('  and we also know the satellite locations, S')\n",
+        "print('  Goal: find your location \"x\"')\n",
+        "print(pr)"
+      ],
+      "metadata": {
+        "id": "tUPjkr_1AmoK",
+        "outputId": "55afb273-bca2-4c27-ba3f-a81af8bbb07b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The measured data are the pseudorange \"pr\", one per satellite\n",
+            "  and we also know the satellite locations, S\n",
+            "  Goal: find your location \"x\"\n",
+            "[3.53471601 2.77236444 3.97538954]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now suppose we don't know the exact travel time due to an inexact clock"
+      ],
+      "metadata": {
+        "id": "nu1ZPUq7Jr5K"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = 3 # dimension of space\n",
+        "m = 4 # number of satellites, should be at least 4 for now\n",
+        "\n",
+        "xTrue = np.array( [1,2,3] ) # true location of receiver\n",
+        "\n",
+        "rng = np.random.default_rng(123)\n",
+        "S   = rng.standard_normal( (m,n) ) # locations of satellites, arbitrary for now\n",
+        "c   = 7.8 # speed of light\n",
+        "r   = np.linalg.norm( S - xTrue, axis=1 ) # true ranges\n",
+        "t   = r / c # exact travel times\n",
+        "b   = 0.1   # bias in the receiver's clock\n",
+        "t_observed = t + b\n",
+        "pr  = c*t_observed # measured pseudoranges\n",
+        "print('The measured data are the pseudorange \"pr\", one per satellite')\n",
+        "print('  and we also know the satellite locations, S')\n",
+        "print('  Goal: find your location \"x\" and clock bias b')\n",
+        "print(pr)"
+      ],
+      "metadata": {
+        "id": "AIZoOzYrJwan",
+        "outputId": "99f5fe06-31a2-407d-f08d-cdf3cd5b7378",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The measured data are the pseudorange \"pr\", one per satellite\n",
+            "  and we also know the satellite locations, S\n",
+            "  Goal: find your location \"x\" and clock bias b\n",
+            "[4.31471601 3.55236444 4.75538954 5.86463678]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
